# Embedded

./: .gitignore  DefineCan.c  DefineCan_Pointer_Issue.c  DefineCan_Pointer_Solution.c  FullCodeC.c  Janpan.py  Janpan.spec  PhapSu.py  Readme.txt  V_MODEL.drawio  dea.docx  git.gitignore  hexfile.c  hexfile.hex  hexfile_merge.c  hexfile_upwork.hex  python.py
Algorithm/: Array2D3D.c  CRC.c  CanStack.c  Dijkstra.c  Function_Pointer.c  Global_Static.c  LIFO_Uart.c  Malloc.c  Note  Pointer_and_Resgister.c  Queue_Stack_FIFO.c  Queue_Stack_LIFO.c  RegisterAccess.c  StackAndQueue.c  Std_Types.h  StorageClassesInC.c  Struct.c  Test.c  Tichhop_C.c  Tichhop_C_C++.cpp  Tichhop_C_C++.md  __I__O__IO.c  algorithm_interview.c  example.h  memcpy.c  typecast_bitTranslation.c  watchdog.c
CAN-Dev/: Flow.drawio
CAN-Testing/: V_MODEL.drawio
Diag_Enhance_Test/: Brake.c  Lamp.c  Meter.c  diag.c  diag.h  main.c
DisplayMonitor/: speedometer  speedometer.cpp  test.cpp
Embedded-Coding/: PID.c  Readme.txt
Enscrypt_Descrypt/: automotive_encryption_C  automotive_encryption_C++  automotive_encryption_C++.cpp  automotive_encryption_C.c  automotive_encryption_py.py
Interview/: Pointer.c  Readme.txt  Test.c
LCD/: LCD1602.docx  Setup KeilC.docx
Logs/: output.txt  output_LOG.txt
RTE_Simulation/: App_SWC.c  LightControl_SWC.h  RTE.c  main.c
SimulatorCan/: CanDriver.c  CanDriver_PB.c  Test.c  make.mak
TestandDebug/: Pointer_and_Resgister.c  Test.c
car-dashboard/: CMakeLists.txt
car-dashboard/src/: dashboard.cpp  dashboard.h  database.cpp  database.h  main.cpp  vehicle.cpp  vehicle.h
(+172 files in other folders)
